--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
                     </li>
                     <li class="list-group-item bg-dark">
                       <label for="city">Enter a City</label>
-                      <input type="text" placeholder="1/10/2010" id="city" />
+                      <input type="text" placeholder="wichita" id="city" />
                     </li>
                     <li class="list-group-item bg-dark">
                       <label for="state">Enter a State</label>
-                      <input type="text" placeholder="1/10/2010" id="state" />
+                      <input type="text" placeholder="ks" id="state" />
                     </li>
                     <li class="list-group-item bg-dark">
                       <label for="country">Enter a Country</label>
-                      <input type="text" placeholder="1/10/2010" id="country" />
+                      <input type="text" placeholder="us" id="country" />
                     </li>
                     <li class="list-group-item bg-dark">
                       <label for="shape">Enter a Shape</label>
-                      <input type="text" placeholder="1/10/2010" id="shape" />
+                      <input type="text" placeholder="teardrop" id="shape" />
                     </li>
                 </ul>
             </form>
